<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Recipe" Id="{f7b88f77-e2e0-4055-8c4a-415f0b4b34ca}">
    <Declaration><![CDATA[TYPE ST_Recipe :
STRUCT
    stInfo           : ST_RecipeInfo;
    stSolventsTimes  : ST_RecipeSolventAndTimes;
    stVolumes        : ST_RecipeVolumes;
    stOtherParams    : ST_RecipeOtherParams;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>